--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>appleseed{{% | {{ page.title }}</title>
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         <link rel="stylesheet" href="{{ site.baseurl }}css/slick.css"/>
         <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
     </head>
