updated appleseed logo.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <div id="header">
             <div id="logo">
                 <a href="/">
-                    <img src="/img/appleseed-logo.png" alt="appleseed logo" />
+                    <img src="/img/appleseed-website-logo.png" alt="appleseed logo" />
                 </a>
             </div>
             <div id="navigation">
