--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,8 @@
             </div>
         </div>
         {% if page.home %}
-            <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-            <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+            <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+            <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
             <script type="text/javascript" src="js/slick.min.js"></script>
             <script>
                 $(document).ready(function() {
