--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,9 @@
             </div>
             <div id="navigation">
                 <ul>
-                    {% assign current = page.url | remove_first: site.baseurl | prepend: '/' %}
                     {% for item in site.data.menus %}
                     <li>
-                        <a href="{{ item.url }}" debug="page.url={{page.url}} site.baseurl={{ site.baseurl }} current={{ current }} item.url={{ item.url }}" {% if current == item.url %}class="active"{% endif %}>{{ item.label }}</a>
+                        <a href="{{ item.url }}" debug="page.url={{page.url}} site.baseurl={{ site.baseurl }} item.url={{ item.url }}" {% if page.url == item.url %}class="active"{% endif %}>{{ item.label }}</a>
                     </li>
                     {% endfor %}
                 </ul>
