--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}css/slick.css"/>
-        <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
+        <link rel="stylesheet" href="/css/slick.css"/>
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <div id="header">
