--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
                     </div>
                 </a>
                 <div id="download-version">
-                    <a href="https://github.com/appleseedhq/appleseed/releases/tag/1.1.0-alpha-21">Current Version: 1.1.0 alpha-21</a>
+                    <a href="https://github.com/appleseedhq/appleseed/releases/tag/1.1.0-alpha-22">Current Version: 1.1.0 alpha-22</a>
                 </div>
             </div>
             <div id="splash-message">
@@ -49,13 +49,13 @@
         var link, target = '';
 
         if (navigator.appVersion.indexOf("Win") != -1) {
-            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-win64-vs110.zip';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-22/appleseed-1.1.0-alpha-22-0-gcdbec94-win64-vs110.zip';
             target = 'for 64-bit Windows';
         } else if (navigator.appVersion.indexOf("Mac") != -1) {
-            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-mac64-llvm.zip';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-22/appleseed-1.1.0-alpha-22-0-gcdbec94-mac64-clang5.zip';
             target = 'for 64-bit MacOS 10.9+';
         } else if (navigator.appVersion.indexOf("X11") != -1 || navigator.appVersion.indexOf("Linux") != -1) {
-            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-linux64-gcc4.zip';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-22/appleseed-1.1.0-alpha-22-0-gcdbec94-linux64-gcc48.tgz';
             target = 'for 64-bit Linux';
         }
 
