--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         <link rel="stylesheet" href="/css/slick.css"/>
         <link rel="stylesheet" href="/css/styles.css">
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     </head>
     <body>
         <div id="header">
