--- a/css/styles.css
+++ b/css/styles.css
@@ -338,9 +338,10 @@ article p a:hover {
 
 #social ul > li {
     display: inline-block;
-    display: inline;
+    *display: inline;
     margin-top: 5px;
     margin-right: 10px;
+    zoom: 1;
 }
 
 #copyright {
