fixed broken HTML.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,10 +47,9 @@
         <div class="clear">
         </div>
     </div>
-    <div id="commits">
-        <h2 class="home-title">Development Activity</h2></div>
+    <div id="commits" style="display: none">
+        <h2 class="home-title">Development Activity</h2>
         <div>
-
             <div class="highlight">
                 <code id="latest-commits" class="language-bash">
                     <script src="js/development-activity.js"></script>
