simplified and improved styling.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,13 +49,11 @@
     </div>
     <div id="commits" style="display: none">
         <h2 class="home-title">Development Activity</h2>
-        <div>
-            <div class="highlight">
-                <code id="latest-commits" class="language-bash">
-                    <script src="js/development-activity.js"></script>
-                </code>
-                <a href="https://github.com/appleseedhq/appleseed/commits/master">More...</a>
-            </div>
+        <div class="commits-container">
+            <code id="latest-commits" class="language-bash">
+                <script src="js/development-activity.js"></script>
+            </code>
+            <a href="https://github.com/appleseedhq/appleseed/commits/master">More...</a>
         </div>
     </div>
     <script>
