fixed styling of latest commits on home page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,10 +49,10 @@
     </div>
     <div id="commits" style="display: none">
         <h2 class="home-title">Development Activity</h2>
-        <div class="commits-container">
-            <code id="latest-commits" class="language-bash">
+        <div id="commit-container">
+            <ul id="latest-commits">
                 <script src="js/development-activity.js"></script>
-            </code>
+            </ul>
             <a href="https://github.com/appleseedhq/appleseed/commits/master">More...</a>
         </div>
     </div>
