--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,7 +18,7 @@
 
     <div class="section light quick">
         <div class="content">
-            <div class="buttons-wrapper">
+            <div class="wrapper">
                 <div class="buttons">
                     <div class="download">
                         {% for release in site.data.releases limit:1 %}
