--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>appleseed - {{ page.title }}</title>
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
         <link rel="stylesheet" type="text/css" href="/css/lightbox.css" />
@@ -31,7 +31,7 @@
           ----------------------->
 
         <script type="text/javascript">
-            $(document).ready(function () {
+            $(window).load(function () {
                 var $window = $(window);
                 var $nav = $(".section.navigation");
                 var navTop = $nav.offset().top;
@@ -52,7 +52,11 @@
                     {% for item in site.data.navigation %}
                         {% if item.area == page.area %}
                             <li class="active">
-                                <span>{{ item.label }}</span>
+                                {% if item.url == page.url %}
+                                    <span>{{ item.label }}</span>
+                                {% else %}
+                                    <a href="{{ item.url }}">{{ item.label }}</a>
+                                {% endif %}
                                 <div class="arrow"></div>
                             </li>
                         {% else %}
