--- a/css/styles.css
+++ b/css/styles.css
@@ -136,13 +136,13 @@ code, pre, kbd
     line-height: 50px;
     text-align: center;
     font-size: 20px;
-    color: #1A1A1A;
+    color: #1a1a1a;
     background-color: #666;
 }
 
 .button:hover
 {
-    color: #1A1A1A;
+    color: #1a1a1a;
     background-color: #888;
 }
 
@@ -150,7 +150,7 @@ kbd
 {
     border-style: solid;
     border-width: 1px;
-    border-color: #777 #1A1A1A #1A1A1A #777;
+    border-color: #777 #1a1a1a #1a1a1a #777;
     border-radius: 4px;
 }
 
@@ -234,7 +234,7 @@ article .date
 {
     position: fixed;
     top: 0px;
-    background-color: #1A1A1A;
+    background-color: #1a1a1a;
 }
 
 .section.navigation.sticky + .section
@@ -298,7 +298,7 @@ article .date
 
 .section.navigation.sticky .arrow:after
 {
-    border-top-color: #1A1A1A;
+    border-top-color: #1a1a1a;
 }
 
 /* ----------------------
