decreased the height of the navigation bar in sticky mode.

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,11 +263,11 @@ article .date
     transition: 320ms;
 }
 
-/*.section.navigation.sticky ul li
+.section.navigation.sticky ul li
 {
     padding-top: 10px;
     padding-bottom: 10px;
-}*/
+}
 
 .section.navigation ul li a
 {
