fixed HTML 5 validation errors.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-/* ----------------------
+/* ====================
    Resets.
-   --------------------- */
+   ==================== */
 
 body
 {
@@ -34,9 +34,9 @@ iframe
     box-shadow: 0px 0px 20px 5px #252525;
 }
 
-/* ----------------------
+/* ====================
    Common styles.
-   --------------------- */
+   ==================== */
 
 body
 {
@@ -172,9 +172,9 @@ kbd
     color: #888;
 }
 
-/* ----------------------
+/* ====================
    Posts.
-   --------------------- */
+   ==================== */
 
 article .date
 {
@@ -182,9 +182,9 @@ article .date
     color: #888;
 }
 
-/* ----------------------
+/* ====================
    Sections.
-   --------------------- */
+   ==================== */
 
 .section
 {
@@ -214,9 +214,9 @@ article .date
     padding-bottom: 60px;
 }
 
-/* ----------------------
+/* ====================
    Logo section.
-   --------------------- */
+   ==================== */
 
 .section.logo .wrapper
 {
@@ -230,9 +230,9 @@ article .date
     display: inline-block;
 }
 
-/* ----------------------
+/* ====================
    Navigation section.
-   --------------------- */
+   ==================== */
 
 .section.navigation
 {
@@ -314,9 +314,9 @@ article .date
     border-top-color: transparent;
 }
 
-/* ----------------------
+/* ====================
    Intro section.
-   --------------------- */
+   ==================== */
 
 .section.intro .wrapper
 {
@@ -342,9 +342,9 @@ article .date
     color: #ff6600;
 }
 
-/* ----------------------
+/* ====================
    Quick section.
-   --------------------- */
+   ==================== */
 
 .section.quick .wrapper
 {
@@ -388,18 +388,18 @@ article .date
     vertical-align: top;
 }
 
-/* ----------------------
+/* ====================
    Showcase section.
-   --------------------- */
+   ==================== */
 
 .section.showcase .legend
 {
     text-align: center;
 }
 
-/* ----------------------
+/* ====================
    News section.
-   --------------------- */
+   ==================== */
 
 .section.news article
 {
@@ -408,9 +408,9 @@ article .date
     vertical-align: top;
 }
 
-/* ----------------------
+/* ====================
    Features section.
-   --------------------- */
+   ==================== */
 
 .section.features .group
 {
@@ -487,9 +487,9 @@ article .date
     box-shadow: 0px 0px 20px 5px #252525;
 }
 
-/* ----------------------
+/* ====================
    Team section.
-   --------------------- */
+   ==================== */
 
 .section.team .group
 {
@@ -541,9 +541,9 @@ article .date
     padding-bottom: 20px;
 }
 
-/* ----------------------
+/* ====================
    Download section.
-   --------------------- */
+   ==================== */
 
 .section.download .builds
 {
@@ -577,9 +577,9 @@ article .date
     color: #1A1A1A;
 }
 
-/* ----------------------
+/* ====================
    Docs section.
-   --------------------- */
+   ==================== */
 
 .section.docs .tutorials
 {
@@ -646,9 +646,9 @@ article .date
     box-shadow: 0px 0px 20px 5px #252525;
 }
 
-/* ----------------------
+/* ====================
    Footer section.
-   --------------------- */
+   ==================== */
 
 .section.footer .columns-wrapper
 {
