--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>appleseed - {{ page.title }}</title>
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
         <link rel="stylesheet" type="text/css" href="/css/lightbox.css" />
