--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -53,7 +53,7 @@
     <div class="section dark showcase">
         <div class="content">
             <div class="wrapper">
-                <iframe src="//player.vimeo.com/video/92172277?title=0&amp;byline=0&amp;portrait=0&amp;color=ff6600" width="768" height="432" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="//player.vimeo.com/video/92172277?title=0&amp;byline=0&amp;portrait=0&amp;color=ff6600" width="768" height="432" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 <p class="legend"><a href="http://www.fetchaveryshortfilm.com/">Fetch</a> is a short film produced by the development team and entirely rendered with appleseed</p>
             </div>
         </div>
