fixed HTML 5 validation errors.

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -6,7 +6,7 @@
                 <h2>Feature List</h2>
 
                 <div class="group">
-                    <img src="/img/features/fetch1.jpg">
+                    <img src="/img/features/fetch1.jpg" alt="Fetch Render">
                     <div class="columns">
                         <div class="column left">
                             <div class="block">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="group">
-                    <img src="/img/features/fluffycornellbox.jpg">
+                    <img src="/img/features/fluffycornellbox.jpg" alt="Fluffy Cornell Box Render">
                     <div class="columns">
                         <div class="column left">
                             <div class="block">
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="group">
-                    <img src="/img/features/fetch2.jpg">
+                    <img src="/img/features/fetch2.jpg" alt="Fetch Render">
                     <div class="columns">
                         <div class="column left">
                             <div class="block">
