--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -176,7 +176,7 @@
                 <div class="screenshots">
                     {% for item in site.data.screenshots %}
                         <div class="screenshot">
-                            <a href="{{ item.url }}" data-lightbox="screenshots" data-title="{{ item.legend }}">
+                            <a href="{{ item.url }}" data-lightbox="screenshots" data-title="{{ item.legend | markdownify | strip_html }}">
                                 <img src="{{ item.url }}" alt="{{ item.legend }}">
                             </a>
                             <div class="legend">{{ item.legend | markdownify }}</div>
