--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,15 @@ p, pre
     margin-bottom: 20px;
 }
 
+hr
+{
+    height: 1px;
+    margin-top: 30px;
+    margin-bottom: 35px;
+    border: 0px;
+    background-color: #282828;
+}
+
 h2:not(:first-child)
 {
     margin-top: 60px;
