--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,8 +27,9 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Made with care&mdash;Released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a></p>
-                    <p>&copy; 2010-2015 The appleseedhq Organization</p>
+                    <p>Made with care&mdash;Released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
+                    <br>
+                    &copy; 2010-2015 The appleseedhq Organization</p>
                 </div>
             </div>
         </div>
